--- a/merrimackcspage/src/css/home.css
+++ b/merrimackcspage/src/css/home.css
@@ -11,24 +11,32 @@
 }
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1400px) {
     .title {
-        font-size: var(--largeFont);
+        font-size: 5rem;
+    }
+
+}
+
+@media screen and (max-width: 1300px) {
+    .title {
+        font-size: 4rem;
     }
 
 }
 
 @media screen and (max-width: 800px) {
-
     .titlecontainer {
-        width: 90%;
+        width: 100%;
         text-align: center;
+    }
+    .title {
+        font-size: var(--largeFont);
     }
 }
 
 /* https://alvarotrigo.com/blog/css-text-animations/ */
-.animate-charcter
-{
+.animate-charcter{
   background-image: linear-gradient(
     -225deg,
     blue 0%,
@@ -41,7 +49,6 @@
   background-size: 200% auto;
   color: #fff;
   background-clip: text;
-  text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 3.5s linear infinite;
@@ -54,9 +61,21 @@
   }
 }
 
-h1 {
+ /* Reference: https://codepen.io/alvarotrigo/pen/ExvqdNa  */
+
+.blurdiv {
+    width: 100%;
+    background-color: lightgrey;
+    border-radius: 50px;
+    margin-top: 50px;
+    padding-bottom: 50px;
+    padding: 50px;
+    text-align: center;
+}
+
+.blurdiv  .blur h1 {
     font-family: "Montserrat Medium";
-    max-width: 40ch;
+    width: 100%;
     text-align: center;
     transform: scale(0.94);
     animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
@@ -66,82 +85,82 @@ h1 {
       transform: scale(1);
     }
   }
-  
-  span {
+  .blur  span {
+    margin-right: 5px;
     display: inline-block;
     opacity: 0;
     filter: blur(4px);
   }
   
-  span:nth-child(1) {
+  .blur  span:nth-child(1) {
     animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(2) {
+  .blur  span:nth-child(2) {
     animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(3) {
+  .blur   span:nth-child(3) {
     animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(4) {
+  .blur  span:nth-child(4) {
     animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(5) {
+  .blur  span:nth-child(5) {
     animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(6) {
+  .blur  span:nth-child(6) {
     animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(7) {
+  .blur  span:nth-child(7) {
     animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(8) {
+  .blur span:nth-child(8) {
     animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(9) {
+  .blur  span:nth-child(9) {
     animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(10) {
+  .blur   span:nth-child(10) {
     animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(11) {
+  .blur   span:nth-child(11) {
     animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(12) {
+  .blur  span:nth-child(12) {
     animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(13) {
+  .blur  span:nth-child(13) {
     animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(14) {
+  .blur  span:nth-child(14) {
     animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(15) {
+  .blur  span:nth-child(15) {
     animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(16) {
+  .blur  span:nth-child(16) {
     animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(17) {
+  .blur  span:nth-child(17) {
     animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
-  span:nth-child(18) {
+  .blur  span:nth-child(18) {
     animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
   
@@ -151,3 +170,4 @@ h1 {
       filter: blur(0);
     }
   }
+  
