--- a/merrimackcspage/src/css/home.css
+++ b/merrimackcspage/src/css/home.css
@@ -1,48 +1,80 @@
 .titlecontainer {
-    margin-top: 100px;
-    width: 60%;
-    float: left;
-    background-color: white;
+  margin-top: 100px;
+  width: 60%;
+  float: left;
+  background-color: white;
 }
 
 .title {
-    font-size: 6rem;
-    font-family: var(--poppinsBold);
+  font-size: 6rem;
+  font-family: var(--poppinsBold);
+}
+.blurdiv {
+  width: 60%;
+  background-color: lightgrey;
+  border-radius: 50px;
+  margin-top: 50px;
+  padding-bottom: 50px;
+  padding: 50px;
+  text-align: center;
+}
+.blurdiv .blur h1 {
+  font-family: "Montserrat Medium";
+  width: 100%;
+  text-align: center;
+  transform: scale(0.94);
+  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
 }
 
+.fluid ol{
+  flex: 1;
+  margin-top: 20px;
+  padding: 20px;
+  list-style-type: none;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.fluid li {
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
+}
 
 @media screen and (max-width: 1400px) {
-    .title {
-        font-size: 5rem;
-    }
-
+  .title {
+      font-size: 5rem;
+  }
 }
 
 @media screen and (max-width: 1300px) {
-    .title {
-        font-size: 4rem;
-    }
-
+  .title {
+      font-size: 4rem;
+  }
 }
 
 @media screen and (max-width: 800px) {
-    .titlecontainer {
-        width: 100%;
-        text-align: center;
-    }
-    .title {
-        font-size: var(--largeFont);
-    }
+  .titlecontainer {
+      width: 100%;
+      text-align: center;
+  }
+  .title {
+      font-size: var(--largeFont);
+  }
+  .fluid {
+      text-align: center;
+      width: 100%;
+  }
 }
 
-/* https://alvarotrigo.com/blog/css-text-animations/ */
-.animate-charcter{
+.animate-charcter {
   background-image: linear-gradient(
-    -225deg,
-    blue 0%,
-    green 49%,
-    yellow 67%,
-    blue 100%
+      -225deg,
+      blue 0%,
+      green 49%,
+      yellow 67%,
+      blue 100%
   );
   background-size: auto auto;
   background-clip: border-box;
@@ -57,117 +89,104 @@
 
 @keyframes textclip {
   to {
-    background-position: 200% center;
+      background-position: 200% center;
   }
 }
 
- /* Reference: https://codepen.io/alvarotrigo/pen/ExvqdNa  */
 
-.blurdiv {
-    width: 100%;
-    background-color: lightgrey;
-    border-radius: 50px;
-    margin-top: 50px;
-    padding-bottom: 50px;
-    padding: 50px;
-    text-align: center;
-}
-
-.blurdiv  .blur h1 {
-    font-family: "Montserrat Medium";
-    width: 100%;
-    text-align: center;
-    transform: scale(0.94);
-    animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
-  }
-  @keyframes scale {
-    100% {
+@keyframes scale {
+  100% {
       transform: scale(1);
-    }
   }
-  .blur  span {
-    margin-right: 5px;
-    display: inline-block;
-    opacity: 0;
-    filter: blur(4px);
-  }
-  
-  .blur  span:nth-child(1) {
-    animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(2) {
-    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur   span:nth-child(3) {
-    animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(4) {
-    animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(5) {
-    animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(6) {
-    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(7) {
-    animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur span:nth-child(8) {
-    animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(9) {
-    animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur   span:nth-child(10) {
-    animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur   span:nth-child(11) {
-    animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(12) {
-    animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(13) {
-    animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(14) {
-    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(15) {
-    animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(16) {
-    animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(17) {
-    animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  .blur  span:nth-child(18) {
-    animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
-  }
-  
-  @keyframes fade-in {
-    100% {
+}
+
+.blur span {
+  margin-right: 5px;
+  display: inline-block;
+  opacity: 0;
+  filter: blur(4px);
+}
+
+.blurdiv,
+.blurdiv form {
+  margin-top: 20px;
+}
+
+.blur span:nth-child(1) {
+  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(2) {
+  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(3) {
+  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(4) {
+  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(5) {
+  animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(6) {
+  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(7) {
+  animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(8) {
+  animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(9) {
+  animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(10) {
+  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(11) {
+  animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(12) {
+  animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(13) {
+  animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(14) {
+  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(15) {
+  animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(16) {
+  animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(17) {
+  animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+.blur span:nth-child(18) {
+  animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+@keyframes fade-in {
+  100% {
       opacity: 1;
       filter: blur(0);
-    }
   }
-  
+}
