--- a/merrimackcspage/src/css/home.css
+++ b/merrimackcspage/src/css/home.css
@@ -9,37 +9,25 @@
   font-size: 6rem;
   font-family: var(--poppinsBold);
 }
-.blurdiv {
-  width: 60%;
-  background-color: lightgrey;
-  border-radius: 50px;
-  margin-top: 50px;
-  padding-bottom: 50px;
-  padding: 50px;
-  text-align: center;
-}
-.blurdiv .blur h1 {
-  font-family: "Montserrat Medium";
-  width: 100%;
-  text-align: center;
-  transform: scale(0.94);
-  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
-}
 
-.fluid ol{
+
+.kb {
+  width: 99%;
+  margin: auto;
+  height: fit-content;
   flex: 1;
-  margin-top: 20px;
-  padding: 20px;
+  padding: 20px 20px;
   list-style-type: none;
-  margin-bottom: 30px;
   position: relative;
 }
 
-.fluid li {
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
-  padding: 10px;
-  background-color: #f5f5f5;
+.kb .individual-kb {
+  margin-bottom: 20px; /* Add margin-bottom to create space between columns */
+  margin-right: 20px;
+  border: 1px solid black;
+  padding: 20px;
+  background-color: lightgrey;
+  border-radius: 20px;
 }
 
 @media screen and (max-width: 1400px) {
@@ -62,11 +50,37 @@
   .title {
       font-size: var(--largeFont);
   }
-  .fluid {
-      text-align: center;
-      width: 100%;
+  .kb .individual-kb{
+    margin-right: 0px;
   }
 }
+
+
+
+
+
+
+
+
+.blurdiv {
+  width: 100%;
+  background-color: lightgrey;
+  border-radius: 50px;
+  margin-top: 50px;
+  padding-bottom: 50px;
+  padding: 50px;
+  text-align: center;
+}
+
+.blurdiv .blur h1 {
+  font-family: "Montserrat Medium";
+  width: 100%;
+  text-align: center;
+  transform: scale(0.94);
+  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+}
+
+
 
 .animate-charcter {
   background-image: linear-gradient(
