--- a/merrimackcspage/src/css/navbar.css
+++ b/merrimackcspage/src/css/navbar.css
@@ -1,3 +1,16 @@
+.NavBarClass {
+    padding-top: 0px;
+    margin: 0;
+    position: fixed;
+    background-image: url("../../public/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1001;
+    top: 0;
+    height: 10px;
+    width: 100%;
+}
+
 body {
     margin: 0;
     padding-top: 50px; /* Adjust this value according to your navbar height */
@@ -12,7 +25,7 @@ ul {
     overflow: hidden;
     background-color: white;
     position: fixed;
-    top: 0;
+    top: 10px;
     width: 100%;
 }
 
