--- a/merrimackcspage/src/css/knowledgebase.css
+++ b/merrimackcspage/src/css/knowledgebase.css
@@ -15,6 +15,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 35px;
+    text-align: center;
+    justify-content: center;
 }
 
 .post-data {
