--- a/merrimackcspage/src/css/knowledgebase.css
+++ b/merrimackcspage/src/css/knowledgebase.css
@@ -1,3 +1,7 @@
+:root {
+    --bg-color: rgba(255, 255, 255, 0.795)
+}
+
 .post {
     margin-left: 10%;
     margin-right: 10%;
@@ -5,7 +9,7 @@
     justify-content: left;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(221, 239, 245, 0.705);
+    background-color: var(--bg-color);
     border-radius: 10px;
     padding: 10px 10px 10px 10px;
     
@@ -42,8 +46,18 @@
     flex-direction: column;
     align-items: center;
     margin-top: 5rem;
-    background-color: rgba(255, 255, 255, 0.795);
+    background-color: var(--bg-color);
     border-radius: 10px;
     padding: 10px 10px 10px 10px;
     flex-wrap: wrap;
+}
+
+.search {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin-top: 5rem;
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
 }
