Bugs with adding comments, will look into tomorrow.

--- a/merrimackcspage/src/css/knowledgebase.css
+++ b/merrimackcspage/src/css/knowledgebase.css
@@ -79,5 +79,17 @@
 }
 
 .comment {
-    
+
+}
+
+.comments {
+    display: flex;
+    flex-direction: column;
+}
+
+.commentsInput {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    padding: 10px 10px 10px 10px;
 }
