--- a/merrimackcspage/src/css/navbar.css
+++ b/merrimackcspage/src/css/navbar.css
@@ -53,6 +53,7 @@ li a {
     text-align: center;
     padding: 0px 16px;
     text-decoration: none;
+    font-weight: bold;
 }
 
 li a span:hover {
