--- a/merrimackcspage/src/css/home.css
+++ b/merrimackcspage/src/css/home.css
@@ -1,3 +1,16 @@
+.content {
+  margin-top: 10rem;
+  padding-bottom: 5rem;
+}
+
+.content-container {
+  margin-top: 5rem;
+}
+
+.closing {
+  margin-bottom: 5rem;
+}
+
 .titlecontainer {
   margin-top: 100px;
   width: 60%;
