added css responisveness for navbar and logo and card blocks on homepage.

--- a/merrimackcspage/src/css/home.css
+++ b/merrimackcspage/src/css/home.css
@@ -1,3 +1,15 @@
+.content-container-inner {
+  width: 100%;
+  margin: auto;
+}
+
+
+/* @media screen and (max-width: 800px) {
+  .content-container-inner {
+    width: 50%;
+  }
+} */
+
 .content-container{
   height: 55rem;
 }
