--- a/merrimackcspage/src/css/navbar.css
+++ b/merrimackcspage/src/css/navbar.css
@@ -1,3 +1,16 @@
+.logo { 
+    margin-top: 10px;
+    float: left;
+    margin-right: 10px;
+    display: block;
+}
+
+@media screen and (max-width: 900px) {
+    .logo {
+        display: none;
+    }
+}
+
 .NavBarClass {
     margin: 0;
     position: fixed;
