--- a/merrimackcspage/src/css/footer.css
+++ b/merrimackcspage/src/css/footer.css
@@ -22,7 +22,7 @@
 
 
 /* Nav bar reference: https://www.w3schools.com/css/css_navbar_horizontal.asp */
-ul {
+.footer-ul {
     z-index: 1000;
     list-style-type: none;
     margin: 0;
