Adding interest form.

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -234,3 +234,16 @@
     height: 45rem;
   }
 }
+
+/**
+Shadow fade
+*/
+
+.shadow-sm,.shadow-xl {
+  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),0 8px 10px -6px var(--tw-shadow-color)
+}
