--- a/src/css/knowledgebase.css
+++ b/src/css/knowledgebase.css
@@ -96,6 +96,16 @@
     padding: 10px 10px 10px 10px;
 }
 
+.interestForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5rem;
+    background-color: var(--bg-color);
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+}
+
 @media screen and (max-width: 800px) {
    .post-container {
     max-width: 100%;
